# market-agentic-assistant

./: .env.example  .gitignore  README.md  pyproject.toml
agent/: __init__.py  digest_agent.py
agent/prompts/: digest.md
config/: macro_indicators.yaml  watchlist.yaml
fetchers/: __init__.py  macro.py  market.py  news.py  twstock_extra.py
scripts/: bisect_user_prompt.py  daily_run.py  debug_sdk.py  hello.py  minimal_repro.py  probe_order.py  test_sdk_auth.py
